# Learn-Cherno-s-GameEngine

./: .editorconfig  .gitignore  .gitmodules  CMAKE_README.md  CMakeLists.txt  GameEngine.sln  README.md  Renderer_ImGui_Design_Report.md  build.bat  convert_encoding.ps1  imgui.ini  imgui修改参考.md  premake5.lua  rendererArc.md
.cursor/rules/: gameengine.mdc
.kiro/specs/component-lifecycle-gpu-resources/: design.md  requirements.md
.kiro/specs/editor-enhancements/: design.md  requirements.md
.kiro/steering/: product.md  structure.md  tech.md
Engine/: Engine.vcxproj
GameEngine/: CMakeLists.txt  GameEngine.vcxproj  GameEngine.vcxproj.filters  调试指南.md
GameEngine/Shader/: README.md  default.glsl  default_vertex.glsl  fragment_color.glsl  fragment_position.glsl  test_simple.glsl  vertex_shader.glsl
GameEngine/dependency/GLFW_3_4/lib/: glfw3.lib
GameEngine/dependency/GLFW_3_4/lib/pkgconfig/: glfw3.pc
GameEngine/dependency/glad/: CMakeLists.txt  Glad.vcxproj  premake5.lua
GameEngine/dependency/glad/include/glad/: glad.h
GameEngine/dependency/glad/src/: glad.c
GameEngine/src/: Engine.h  pch.h
GameEngine/src/Engine/: Application.cpp  Application.h  CameraManager.cpp  CameraManager.h  EntryPoint.h  Event.cpp  Event.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  ModelExample.cpp  MouseEvent.h  Renderer.h  RendererLayer.cpp  RendererLayer.h  TestLayer.cpp  TestLayer.h  Utils.h  WindowWindows.cpp  WindowWindows.h  Windows.cpp  Windows.h  camera.cpp  camera.h  core.h  log.cpp  log.h
GameEngine/src/Engine/Debug/: Instrumentor.h
GameEngine/src/Engine/Editor/: EditorLayer.cpp  EditorLayer.h
GameEngine/src/Engine/Imgui/: ImGui.cpp  ImGui.h  ImGuiLayer.cpp  ImGuiLayer.h  ImguiOpenglRender.h  imgui_impl_glfw.cpp
GameEngine/src/Engine/Model/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Node.cpp  Node.h
GameEngine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  InstancedRenderer.cpp  InstancedRenderer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  RenderGlobal.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureTest.cpp  Vertex.h  VertexArray.cpp  VertexArray.h
GameEngine/src/Engine/Renderer/Renderpass/: RenderPass.cpp  RenderPipelineSettings.h  SkyBoxPass.cpp  SkyBoxPass.h
GameEngine/src/Engine/Renderer/renderpass/: ForwardPass.cpp  ForwardPass.h  PostEffectPass.cpp  PostEffectPass.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h
GameEngine/src/Engine/Resources/: MaterialLibrary.cpp  MaterialLibrary.h  MeshLibrary.cpp  MeshLibrary.h  ModelManager.cpp  ModelManager.h  ProjectManager.cpp  ProjectManager.h  ResouceRegistry.h  ResourceManager.cpp  ResourceManager.h  ShaderLibrary.cpp  ShaderLibrary.h  TextureLibrary.cpp  TextureLibrary.h
GameEngine/src/Engine/Scene/: Component.cpp  Component.h  Entity.cpp  Entity.h  Light.h  PrefabTypes.h  Prefabs.h  Scene.cpp  Scene.h  ScriptableEntity.h
GameEngine/src/Engine/Utils/: Prefilter.cpp  Prefilter.h  Timer.cpp  Timer.h  random.h
GameEngine/src/Engine/platform/: ImguiOpenglRender.cpp  WindowWindows.cpp  WindowWindows.h  WindowsInput.cpp  WindowsInput.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
GameEngine/src/Engine/platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
GameEngine/x64/Debug/: GameEngine.dll.recipe  GameEngine.ilk  vc143.idb
GameEngine/x64/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SandBox/: 101 homework.sln  CMakeLists.txt  SandBox.vcxproj  SandBox.vcxproj.filters  imgui.ini
SandBox/Shader/: cube.glsl  default_fragment.glsl
SandBox/Shader/PostEffect/: postEffect_fs.glsl  postEffect_vs.glsl
SandBox/assets/shaders/: FlatColor.glsl
SandBox/src/: SandBox.cpp  SandBox.h  main.cpp  pch.h  test.cpp
Shader/: cube.glsl  cube_fs.glsl  cube_vs.glsl  debug.glsl  default.glsl  depth_fs.glsl  depth_vs.glsl  fragment_color.glsl  instanced_fragment.glsl  light_fs.glsl  light_vs.glsl  shader.glsl  shader.txt  sphere_fs.glsl  vertex_shader.glsl
Shader/PostEffect/: defaultBlit_fs.glsl  postEffect_fs.glsl  postEffect_vs.glsl
Shader/compute/: blur.glsl  culling_lights.glsl  invert_color.glsl  tiled_z.glsl
Shader/compute/depreted/: culling_lights.glsl  culling_lights_bug.glsl  culling_lights_lights.glsl
Shader/skybox/: skybox_fs.glsl  skybox_vs.glsl
doc/: Forward+.md  OpenGL DSA(直接资源访问).md  OpenGLDSA.md  Renderer_ImGui_Design_Report.md  piccolo源码阅读.md  为opengl加载3d模型.md  开发日记.md  模型加载系统设计.md  跨图形 API 抽象设计文档.md  跨图形API抽象v1.0.md
doc/弃用/: editor.md  renderpass.md  渲染器架构改进方案.md
doc/新建文件夹/: C++.md  D3D12临时知识.md  Opengl指南.md
doc/资源管理/: assimp集成方案.md  assimp集成方案修1.md  模型加载系统设计思路.md  模型绘制——偏移.md
resources/envmap/: skybox_irradiance.hdr  skybox_prefiltered.hdr  skybox_radiance.hdr
文档/: C++.md  ECS架构实现指南.md  Opengl指南.md  render.md  renderpass.md  shader、材质管理.md  事件系统.md  开发日记.md
文档/新建文件夹/: C++.md  Opengl指南.md  天空盒.md  实例化、排序、批处理.md
文档/资源管理/: 优化方向.md  资产导入和管理.md  资源管理方案.md
